--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <div class="linksColumn">
       <img src="./azure.png" alt="Microsoft Azure logo" width="400" />
-      <p class="my_name">Jim Chaffee</p>
+      <p class="my_name">Blu Esposito</p>
     </div>
 
     <script>
